--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,1 +1,7 @@
-%h1 Index Page
+%h1 Home Page
+#workouts
+  - @workouts.each do |workout|
+    %h1= link_to workout.date, workout
+    %h2= workout.workout
+
+=link_to "New Workout", new_workout_path
