--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,44 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+html{
+  height: 100%;
+}
+
+body{
+  background: #616161; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #616161 , #9bc5c3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #616161 , #9bc5c3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar-default{
+  background: rgba(250,250,250,0.5);
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 1px 0 rgba(0,0,0,.2);
+  border: none;
+  border-radius: 0;
+  .navbar-header{
+    color: #333333;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: -1px;
+  }
+}
+
+#index_workouts {
+  h2 {
+    margin-bottom: 0;
+    font-weight: 100;
+    a {
+      color: white;
+    }
+  }
+  h3 {
+    margin: 0px;
+    font-size: 19px;
+    span {
+      color: darkcyan;
+    }
+  }
+}
